New mob level system (boss blacklist WIP)

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ repositories {
     flatDir {
         dirs 'subsources/metamorph/build/libs'
     }
+    maven {
+        url "http://tehnut.info/maven"
+    }
 }
 
 dependencies {
@@ -51,6 +54,7 @@ dependencies {
     // real examples
     //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
     //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
+    
     compile group : 'mchorse.metamorph', name : 'metamorph', version : '1.1.4-1.10.2'
     
     // the 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
@@ -60,6 +64,8 @@ dependencies {
     // except that these dependencies get remapped to your current MCP mappings
     //deobfCompile 'com.mod-buildcraft:buildcraft:6.0.8:dev'
     //deobfProvided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
+    
+    deobfCompile 'mcp.mobius.waila:Hwyla:1.8.12-B26_1.10.2'
 
     // for more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
