New AI-based morph targeting, eg. wolves attack players in sheep morphs

--- a/src/main/resources/META-INF/hardcorealchemy_at.cfg
+++ b/src/main/resources/META-INF/hardcorealchemy_at.cfg
@@ -1,13 +1,21 @@
-#######################################
-# Hardcore Alchemy Transformers Maybe #
-#######################################
+#################################
+# Hardcore Alchemy Transformers #
+#################################
 
-
+# AI to make entities think that morphed players are actually mobs they can attack
+public-f net.minecraft.entity.ai.EntityAINearestAttackableTarget field_75308_c #targetChance
+public-f net.minecraft.entity.ai.EntityAINearestAttackableTarget field_75307_b #targetClass
+public-f net.minecraft.entity.ai.EntityAINearestAttackableTarget field_75309_a #targetEntity
+public-f net.minecraft.entity.ai.EntityAINearestAttackableTarget field_82643_g #targetEntitySelector
+public-f net.minecraft.entity.ai.EntityAINearestAttackableTarget field_75306_g #theNearestAttackableTargetSorter
+public-f net.minecraft.entity.ai.EntityAITarget field_75299_d #taskOwner
+public-f net.minecraft.entity.ai.EntityAITarget field_75297_f #shouldCheckSight
+public-f net.minecraft.entity.ai.EntityAITarget field_75303_a #nearbyOnly
 
 ########################################
 # ToughAsNails Workspace Compatibility #
 ########################################
-# Taken directly from toughasnails_at.cfg
+# Taken directly from toughasnails_at.cfg; helps with IDE work
 
 #Season colouring
 public-f net.minecraft.world.biome.BiomeColorHelper field_180291_a #GRASS_COLOR
