Fix endermen attacking players unprovoked, and properly implement wolf/ocelot aggro

--- a/src/main/resources/META-INF/hardcorealchemy_at.cfg
+++ b/src/main/resources/META-INF/hardcorealchemy_at.cfg
@@ -11,6 +11,7 @@ public-f net.minecraft.entity.ai.EntityAINearestAttackableTarget field_75306_g #
 public-f net.minecraft.entity.ai.EntityAITarget field_75299_d #taskOwner
 public-f net.minecraft.entity.ai.EntityAITarget field_75297_f #shouldCheckSight
 public-f net.minecraft.entity.ai.EntityAITarget field_75303_a #nearbyOnly
+public-f net.minecraft.entity.ai.EntityAITargetNonTamed field_75310_g #theTameable
 
 ########################################
 # ToughAsNails Workspace Compatibility #
