Give permanent morph different nutrition needs with Nutrition installed, plus data for future hunger/thirst restrictions

--- a/src/main/resources/META-INF/hardcorealchemy_at.cfg
+++ b/src/main/resources/META-INF/hardcorealchemy_at.cfg
@@ -2,7 +2,7 @@
 # Hardcore Alchemy Transformers #
 #################################
 
-# AI to make entities think that morphed players are actually mobs they can attack
+# Accessed by custom AI that makes entities think that morphed players are actually mobs they can attack
 public-f net.minecraft.entity.ai.EntityAINearestAttackableTarget field_75308_c #targetChance
 public-f net.minecraft.entity.ai.EntityAINearestAttackableTarget field_75307_b #targetClass
 public-f net.minecraft.entity.ai.EntityAINearestAttackableTarget field_75309_a #targetEntity
@@ -29,3 +29,12 @@ public net.minecraft.block.BlockIce func_185679_b(Lnet/minecraft/world/World;Lne
 
 #Seasonal freezing
 public net.minecraft.world.World func_175696_F(Lnet/minecraft/util/math/BlockPos;)Z #isWater
+
+#####################################
+# Nutrition Workspace Compatibility #
+#####################################
+# Taken directly from nutrition_at.cfg; helps with IDE work
+
+# EventNutritionButton - Button positions
+public net.minecraft.client.gui.inventory.GuiContainer field_147003_i # guiLeft
+public net.minecraft.client.gui.inventory.GuiContainer field_147009_r # guiTop
