--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ minecraft {
 repositories {
     flatDir {
         dirs 'subsources/metamorph/build/libs'
+        dirs 'subsources/Nutrition/build/libs'
     }
     maven {
         url "http://tehnut.info/maven"
@@ -56,6 +57,7 @@ dependencies {
     //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
     
     compile group : 'mchorse.metamorph', name : 'metamorph', version : '1.1.4-1.10.2'
+    compile group : 'ca.wescook.nutrition', name : 'Nutrition', version : '1.10.2-1.6.0'
     
     // the 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
     //provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
