Fix spiders attacking morphed players

--- a/src/main/resources/META-INF/hardcorealchemy_at.cfg
+++ b/src/main/resources/META-INF/hardcorealchemy_at.cfg
@@ -12,6 +12,7 @@ public-f net.minecraft.entity.ai.EntityAITarget field_75299_d #taskOwner
 public-f net.minecraft.entity.ai.EntityAITarget field_75297_f #shouldCheckSight
 public-f net.minecraft.entity.ai.EntityAITarget field_75303_a #nearbyOnly
 public-f net.minecraft.entity.ai.EntityAITargetNonTamed field_75310_g #theTameable
+public net.minecraft.entity.monster.EntitySpider$AISpiderTarget
 
 ########################################
 # ToughAsNails Workspace Compatibility #
