Fix no-magic-crafting tooltip appearing regardless of the slot hovered over

--- a/src/main/resources/META-INF/hardcorealchemy_at.cfg
+++ b/src/main/resources/META-INF/hardcorealchemy_at.cfg
@@ -14,6 +14,9 @@ public-f net.minecraft.entity.ai.EntityAITarget field_75303_a #nearbyOnly
 public-f net.minecraft.entity.ai.EntityAITargetNonTamed field_75310_g #theTameable
 public net.minecraft.entity.monster.EntitySpider$AISpiderTarget
 
+# Used to check what item slot the mouse is currently hovering over
+public net.minecraft.client.gui.inventory.GuiContainer field_147006_u #theSlot
+
 ########################################
 # ToughAsNails Workspace Compatibility #
 ########################################
