--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,6 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    //Note to self: use custom mappings name next time :D
-    //mappings = "snapshot_20161111"
     mappings = "snapshot_20161111"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
@@ -41,6 +39,7 @@ repositories {
         dirs 'subsources/metamorph/build/libs'
         dirs 'subsources/Nutrition/build/libs'
     }
+    
     maven {
         url "http://tehnut.info/maven"
     }
@@ -56,6 +55,7 @@ dependencies {
     //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
     //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
     
+    // IDE source package folder dependencies
     compile group : 'mchorse.metamorph', name : 'metamorph', version : '1.1.4-1.10.2'
     compile group : 'ca.wescook.nutrition', name : 'Nutrition', version : '1.10.2-1.6.0'
     
@@ -100,7 +100,6 @@ jar {
         attributes (
             'FMLCorePlugin': 'targoss.hardcorealchemy.coremod.HardcoreAlchemyCoreMod',
             'FMLCorePluginContainsFMLMod': 'true',
-            //It may be possible to also add the ToughAsNails access transformers
             "FMLAT": 'hardcorealchemy_at.cfg'
         )
     }
