Fix ghasts attacking morphed players

--- a/src/main/resources/META-INF/hardcorealchemy_at.cfg
+++ b/src/main/resources/META-INF/hardcorealchemy_at.cfg
@@ -13,6 +13,10 @@ public-f net.minecraft.entity.ai.EntityAITarget field_75297_f #shouldCheckSight
 public-f net.minecraft.entity.ai.EntityAITarget field_75303_a #nearbyOnly
 public-f net.minecraft.entity.ai.EntityAITargetNonTamed field_75310_g #theTameable
 public net.minecraft.entity.monster.EntitySpider$AISpiderTarget
+public-f net.minecraft.entity.ai.EntityAIFindEntityNearestPlayer field_179434_b #entityLiving
+public-f net.minecraft.entity.ai.EntityAIFindEntityNearestPlayer field_179432_d #sorter
+public-f net.minecraft.entity.ai.EntityAIFindEntityNearestPlayer field_179435_c #predicate
+public-f net.minecraft.entity.ai.EntityAIFindEntityNearestPlayer field_179433_e #entityTarget
 
 # Used to check what item slot the mouse is currently hovering over
 public net.minecraft.client.gui.inventory.GuiContainer field_147006_u #theSlot
