Fix coremod not loading in release environment. (sad violin plays)

--- a/build.gradle
+++ b/build.gradle
@@ -90,7 +90,7 @@ processResources
 jar {
     manifest {
         attributes (
-            'FMLCorePlugin': 'targoss.hardcorealchemy.coremod.HardcoreAlchemyCoreMod',
+            'FMLCorePlugin': 'targoss.hardcorealchemy.coremod.HardcoreAlchemyCoremod',
             'FMLCorePluginContainsFMLMod': 'true',
             "FMLAT": 'hardcorealchemy_at.cfg'
         )
