--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ minecraft {
     // simply re-run your setup task after changing the mappings to update your workspace.
     mappings = "snapshot_20161111"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+    
+    replace "@HARDCORE_ALCHEMY_VERSION@", project.version
+    replaceIn "HardcoreAlchemy.java"
 }
 
 repositories {
