Fix the Obsidian Sheepman Zombie spawn fix not working (with tests)

--- a/src/main/resources/META-INF/hardcorealchemy_at.cfg
+++ b/src/main/resources/META-INF/hardcorealchemy_at.cfg
@@ -38,3 +38,6 @@ public-f net.minecraft.entity.ai.EntityAIFindEntityNearestPlayer field_179433_e 
 
 # Used to check what item slot the mouse is currently hovering over
 public net.minecraft.client.gui.inventory.GuiContainer field_147006_u #theSlot
+
+# Needed for tests
+public net.minecraft.entity.monster.EntityZombie field_110186_bp #SPAWN_REINFORCEMENTS_CHANCE
