--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,7 @@ compileJava {
 }
 
 minecraft {
-    // version = "1.10.2-12.18.3.2221"
-    version = "1.10.2-12.18.3.0"
+    version = "1.10.2-12.18.3.2511"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -30,7 +29,7 @@ minecraft {
     // stable_#            stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "snapshot_20161111"
+    mappings = "stable_29"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
     
     replace "@HARDCORE_ALCHEMY_VERSION@", project.version
