Add workaround for Thaumcraft arcane crafting table not working in dev environment

--- a/src/main/resources/META-INF/hardcorealchemy_at.cfg
+++ b/src/main/resources/META-INF/hardcorealchemy_at.cfg
@@ -41,3 +41,7 @@ public net.minecraft.client.gui.inventory.GuiContainer field_147006_u #theSlot
 
 # Needed for tests
 public net.minecraft.entity.monster.EntityZombie field_110186_bp #SPAWN_REINFORCEMENTS_CHANCE
+
+# Workaround for Thaumcraft overriding vanilla fields (conflicts with my dev environment because I use CodeChickenCore)
+public-f net.minecraft.inventory.InventoryCrafting field_70466_a #stackList
+public-f net.minecraft.inventory.InventoryCrafting field_70465_c #eventHandler
