Make player unable to do advanced movement or see hotbar/item count while stuck in morph

--- a/src/main/resources/META-INF/hardcorealchemy_at.cfg
+++ b/src/main/resources/META-INF/hardcorealchemy_at.cfg
@@ -36,6 +36,9 @@ public-f net.minecraft.entity.ai.EntityAIFindEntityNearestPlayer field_179432_d 
 public-f net.minecraft.entity.ai.EntityAIFindEntityNearestPlayer field_179435_c #predicate
 public-f net.minecraft.entity.ai.EntityAIFindEntityNearestPlayer field_179433_e #entityTarget
 
+# Used to force auto-jump for some permanent morphs without messing with the setting
+public net.minecraft.client.entity.EntityPlayerSP field_189811_cr #autoJumpEnabled
+
 # Used to check what item slot the mouse is currently hovering over
 public net.minecraft.client.gui.inventory.GuiContainer field_147006_u #theSlot
 
