Finish InstinctEffectHunted (in principle), minus serialization framework and the containing instinct

--- a/src/main/resources/META-INF/hardcorealchemy_at.cfg
+++ b/src/main/resources/META-INF/hardcorealchemy_at.cfg
@@ -36,6 +36,9 @@ public-f net.minecraft.entity.ai.EntityAIFindEntityNearestPlayer field_179432_d 
 public-f net.minecraft.entity.ai.EntityAIFindEntityNearestPlayer field_179435_c #predicate
 public-f net.minecraft.entity.ai.EntityAIFindEntityNearestPlayer field_179433_e #entityTarget
 
+# Used to force-set the attack target of an entity to a certain player
+public net.minecraft.entity.EntityLiving field_70696_bz #attackTarget
+
 # Used to force auto-jump for some permanent morphs without messing with the setting
 public net.minecraft.client.entity.EntityPlayerSP field_189811_cr #autoJumpEnabled
 
