Add dimensional flux effect when switching dimensions or touching nether portal

--- a/src/main/resources/META-INF/hardcorealchemy_at.cfg
+++ b/src/main/resources/META-INF/hardcorealchemy_at.cfg
@@ -51,3 +51,8 @@ public net.minecraft.entity.monster.EntityZombie field_110186_bp #SPAWN_REINFORC
 # Workaround for Thaumcraft overriding vanilla fields (conflicts with my dev environment because I use CodeChickenCore)
 public-f net.minecraft.inventory.InventoryCrafting field_70466_a #stackList
 public-f net.minecraft.inventory.InventoryCrafting field_70465_c #eventHandler
+
+# Faster check for dimensional flux on collision with portal block
+public-f net.minecraft.entity.Entity field_71087_bX #inPortal
+# Rendering of portal animation while under dimensional flux effect
+public net.minecraft.client.gui.GuiIngame func_180474_b(FLnet/minecraft/client/gui/ScaledResolution;)V #renderPortal but with slashes
