--- a/src/main/resources/META-INF/hardcorealchemy_at.cfg
+++ b/src/main/resources/META-INF/hardcorealchemy_at.cfg
@@ -52,7 +52,7 @@ public net.minecraft.entity.monster.EntityZombie field_110186_bp #SPAWN_REINFORC
 public-f net.minecraft.inventory.InventoryCrafting field_70466_a #stackList
 public-f net.minecraft.inventory.InventoryCrafting field_70465_c #eventHandler
 
-# Faster check for dimensional flux on collision with portal block
+# Faster check for voidfade on collision with portal block
 public-f net.minecraft.entity.Entity field_71087_bX #inPortal
-# Rendering of portal animation while under dimensional flux effect
+# Rendering of portal animation while under voidfade effect
 public net.minecraft.client.gui.GuiIngame func_180474_b(FLnet/minecraft/client/gui/ScaledResolution;)V #renderPortal but with slashes
