Fix polar bears attacking morphed players

--- a/src/main/resources/META-INF/hardcorealchemy_at.cfg
+++ b/src/main/resources/META-INF/hardcorealchemy_at.cfg
@@ -35,6 +35,7 @@ public-f net.minecraft.entity.ai.EntityAIFindEntityNearestPlayer field_179434_b 
 public-f net.minecraft.entity.ai.EntityAIFindEntityNearestPlayer field_179432_d #sorter
 public-f net.minecraft.entity.ai.EntityAIFindEntityNearestPlayer field_179435_c #predicate
 public-f net.minecraft.entity.ai.EntityAIFindEntityNearestPlayer field_179433_e #entityTarget
+public net.minecraft.entity.monster.EntityPolarBear$AIAttackPlayer
 
 # Used to force-set the attack target of an entity to a certain player
 public net.minecraft.entity.EntityLiving field_70696_bz #attackTarget
