Extract depends-vanilla-only features into new 'tweaks' mod

--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,12 @@ build
 eclipse
 run
 subsources
-libs/*
+*/libs/*
 mod-jars
 subsources
 asset_sources
 *~
+
+#
+*/src/main/resources/META-INF/hardcorealchemy_at.cfg
+!core/src/main/resources/META-INF/hardcorealchemy_at.cfg
