--- a/core/src/main/resources/META-INF/hardcorealchemy_at.cfg
+++ b/core/src/main/resources/META-INF/hardcorealchemy_at.cfg
@@ -1,5 +1,5 @@
 #
-# Copyright 2017-2018 asanetargoss
+# Copyright 2017-2021 asanetargoss
 # 
 # This file is part of Hardcore Alchemy.
 # 
@@ -16,9 +16,18 @@
 # along with Hardcore Alchemy.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-#################################
-# Hardcore Alchemy Transformers #
-#################################
+###############################################
+# WARNING (for development environments only) #
+###############################################
+
+# The original copy of hardcorealchemy_at.cfg is in core/src/main/resources/META-INF
+# If you modify the file anywhere else, IT WILL BE REPLACED with the copy of the file in core
+# Simply edit the version of the file in core/src/main/resources/META-INF
+# Then run your setupDecompWorkspace or build command as you normally would
+
+######################################
+# Hardcore Alchemy Core Transformers #
+######################################
 
 # Accessed by custom AI that makes entities think that morphed players are actually mobs they can attack
 public-f net.minecraft.entity.ai.EntityAINearestAttackableTarget field_75308_c #targetChance
@@ -52,6 +61,10 @@ public net.minecraft.entity.monster.EntityZombie field_110186_bp #SPAWN_REINFORC
 # Workaround for Thaumcraft overriding vanilla fields (conflicts with my dev environment because I use CodeChickenCore)
 public-f net.minecraft.inventory.InventoryCrafting field_70466_a #stackList
 public-f net.minecraft.inventory.InventoryCrafting field_70465_c #eventHandler
+
+########################################
+# Hardcore Alchemy Tweaks Transformers #
+########################################
 
 # Faster check for voidfade on collision with portal block
 public-f net.minecraft.entity.Entity field_71087_bX #inPortal
