Automatically install important test configs to make it easier to test each submod

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -64,6 +64,13 @@ processResources
     }
 }
 
+// Run configs are shared between submods
+task setupRunConfig(type: Copy) {
+    from "../testconfig"
+    into "run/config"
+}
+setupDecompWorkspace.dependsOn setupRunConfig
+
 jar {
     manifest {
         attributes (
