--- a/tweaks/build.gradle
+++ b/tweaks/build.gradle
@@ -40,7 +40,7 @@ minecraft {
 
 dependencies {
     compileOnly project(":core")
-    compileOnly fileTree(dir: "libs", include: "*.jar")
+    compileOnly fileTree(dir: "../compilelibs/core", include: "**/*.jar")
 }
 
 processResources
