--- a/testconfig/metamorph/config.json
+++ b/testconfig/metamorph/config.json
@@ -5,15 +5,15 @@
         "acquire_immediately": false
     },
     "morphs": {
-        "keep_morphs": true,
+        "keep_morphs": false,
         "disable_pov": false,
         "disable_health": false,
         "disable_morph_animation": false,
-        "disable_morph_disguise": false,
+        "disable_morph_disguise": true,
         "disable_first_person_hand": false,
         "morph_in_tight_spaces": false,
         "show_morph_idle_sounds": true,
-        "pause_gui_in_sp": true,
+        "pause_gui_in_sp": false,
         "max_recent_morphs": 20,
         "allow_morphing_into_category_morphs": false,
         "load_entity_morphs": true,
