--- a/survival/build.gradle
+++ b/survival/build.gradle
@@ -34,6 +34,9 @@ minecraft {
     replace "@HARDCORE_ALCHEMY_SURVIVAL_VERSION@", project.version
     replaceIn "HardcoreAlchemySurvival.java"
 
+    replace "\"required-before:\" + HardcoreAlchemy.MOD_ID", "\"required-before:\" + HardcoreAlchemy.MOD_ID + \"[\" + HardcoreAlchemy.VERSION + \"]\""
+    replaceIn "HardcoreAlchemySurvival.java"
+
     clientJvmArgs += ["-Dfml.coreMods.load=targoss.hardcorealchemy.coremod.HardcoreAlchemyCoremod,${coremodPath}"]
     serverJvmArgs += ["-Dfml.coreMods.load=targoss.hardcorealchemy.coremod.HardcoreAlchemyCoremod,${coremodPath}"]
 }
