--- a/creatures/build.gradle
+++ b/creatures/build.gradle
@@ -34,6 +34,9 @@ minecraft {
     replace "@HARDCORE_ALCHEMY_CREATURES_VERSION@", project.version
     replaceIn "HardcoreAlchemyCreatures.java"
 
+    replace "\"required-before:\" + HardcoreAlchemy.MOD_ID", "\"required-before:\" + HardcoreAlchemy.MOD_ID + \"[\" + HardcoreAlchemy.VERSION + \"]\""
+    replaceIn "HardcoreAlchemyCreatures.java"
+
     clientJvmArgs += ["-Dfml.coreMods.load=targoss.hardcorealchemy.coremod.HardcoreAlchemyCoremod,${coremodPath}"]
     serverJvmArgs += ["-Dfml.coreMods.load=targoss.hardcorealchemy.coremod.HardcoreAlchemyCoremod,${coremodPath}"]
 }
