--- a/tweaks/build.gradle
+++ b/tweaks/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 // Project settings
 version = "0.1.0"
 group= "targoss.hardcorealchemy.tweaks"
-archivesBaseName = "hardcorealchemy-tweaks"
+archivesBaseName = "hardcorealchemy_tweaks"
 String coremodPath="targoss.hardcorealchemy.tweaks.coremod.HardcoreAlchemyTweaksCoremod"
 
 sourceCompatibility = targetCompatibility = "1.8" // Need this here so Eclipse task generates correctly.
@@ -45,6 +45,8 @@ dependencies {
     compileOnly project(":core")
     compileOnly fileTree(dir: "../compilelibs/core", include: "**/*.jar")
 }
+
+sourceSets.main.resources.srcDirs += ["../translations/tweaks"]
 
 processResources
 {
