--- a/survival/build.gradle
+++ b/survival/build.gradle
@@ -34,7 +34,7 @@ minecraft {
     replace "@HARDCORE_ALCHEMY_SURVIVAL_VERSION@", project.version
     replaceIn "HardcoreAlchemySurvival.java"
 
-    replace "\"required-before:\" + HardcoreAlchemy.MOD_ID", "\"required-before:\" + HardcoreAlchemy.MOD_ID + \"[\" + HardcoreAlchemy.VERSION + \"]\""
+    replace "\"required-before:\" + HardcoreAlchemy.MOD_ID", "\"required-before:\" + HardcoreAlchemy.MOD_ID + \"@[\" + HardcoreAlchemy.VERSION + \"]\""
     replaceIn "HardcoreAlchemySurvival.java"
 
     clientJvmArgs += ["-Dfml.coreMods.load=targoss.hardcorealchemy.coremod.HardcoreAlchemyCoremod,${coremodPath}"]
