--- a/modpack/build.gradle
+++ b/modpack/build.gradle
@@ -15,9 +15,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 
 // Project settings
-version = "0.7.1"
-group= "targoss.hardcorealchemy.modpack"
-archivesBaseName = "hardcorealchemy_modpack"
+archivesBaseName = jarLabel
 
 sourceCompatibility = targetCompatibility = "1.8" // Need this here so Eclipse task generates correctly.
 compileJava {
@@ -106,3 +104,25 @@ task copyAccessTransformerFromCore(type: Copy) {
 }
 setupDecompWorkspace.dependsOn copyAccessTransformerFromCore
 processResources.dependsOn copyAccessTransformerFromCore
+
+// Creates a mod suite archive at modpack/build/distributions, bundling all the different mod jars (except for the modpack jar), for ease of distribution
+// NOTE: I have learned that you MUST define project properties referenced by other projects in the referencee's gradle.properties file, not the build.gradle file. If you do not do this, you may run into issues where the project property you are trying to reference is undefined, because that project's build.gradle file has not been fully evaluated yet!
+task buildModSuite(type: Zip) {
+    dependsOn ":core:build"
+    dependsOn ":tweaks:build"
+    dependsOn ":creatures:build"
+    dependsOn ":magic:build"
+    dependsOn ":survival:build"
+
+    //archiveName = "hardcorealchemy_modsuite"
+    baseName = "hardcorealchemy_modsuite"
+    version = project.version
+
+    from ("../core/build/libs/${project(":core").jarLabel}-${project(":core").version}.jar")
+    from ("../tweaks/build/libs/${project(":tweaks").jarLabel}-${project(":tweaks").version}.jar")
+    from ("../creatures/build/libs/${project(":creatures").jarLabel}-${project(":creatures").version}.jar")
+    from ("../magic/build/libs/${project(":magic").jarLabel}-${project(":magic").version}.jar")
+    from ("../survival/build/libs/${project(":survival").jarLabel}-${project(":survival").version}.jar")
+    into("libs") {
+    }
+}
