--- a/core/build.gradle
+++ b/core/build.gradle
@@ -15,9 +15,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 
 // Project settings
-version = "0.1.1"
-group= "targoss.hardcorealchemy"
-archivesBaseName = "hardcorealchemy_core"
+archivesBaseName = jarLabel
 String coremodPath="targoss.hardcorealchemy.coremod.HardcoreAlchemyCoremod"
 
 sourceCompatibility = targetCompatibility = "1.8" // Need this here so Eclipse task generates correctly.
