--- a/creatures/build.gradle
+++ b/creatures/build.gradle
@@ -15,9 +15,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 
 // Project settings
-version = "0.1.1"
-group= "targoss.hardcorealchemy.creatures"
-archivesBaseName = "hardcorealchemy_creatures"
+archivesBaseName = jarLabel
 String coremodPath="targoss.hardcorealchemy.creatures.coremod.HardcoreAlchemyCreaturesCoremod"
 
 sourceCompatibility = targetCompatibility = "1.8" // Need this here so Eclipse task generates correctly.
