--- a/survival/build.gradle
+++ b/survival/build.gradle
@@ -15,9 +15,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 
 // Project settings
-version = "0.1.1"
-group= "targoss.hardcorealchemy.survival"
-archivesBaseName = "hardcorealchemy_survival"
+archivesBaseName = jarLabel
 String coremodPath="targoss.hardcorealchemy.survival.coremod.HardcoreAlchemySurvivalCoremod"
 
 sourceCompatibility = targetCompatibility = "1.8" // Need this here so Eclipse task generates correctly.
